2007-03-11  David Lodge <dave@cirt.net>

	* releases.xml.in: Removed null branch from drivel so it will show up in extras

2007-03-11  David Lodge <dave@cirt.net>

	* releases.xml.in: Added damned-lies in extras. Sort of ironic really.

2007-03-11  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: And note branches here. Sigh.

2007-03-11  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Branch gnome-utils, epiphany,
	epiphany-extensions for 2.18.

2007-03-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added gtk-engines module in extras.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added 2.18 release notes.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Commented out gst-boot doc.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added hipo module in extras.

2007-03-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Reordering modules in alphabetic order.

2007-03-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: glade3 and dasher branched for 2.18.

2007-03-06  Daniel Nylander <po@danielnylander.se>

	* translation-teams.xml.in: Updated Swedish information.

2007-03-05  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Removed duplicated modules (criawips, devhelp,
	glade3).
	Fixes bug #407410. 

2007-03-05  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: orca, tomboy and metacity branched for 2.18.

2007-03-05  Djihed Afifi  <djihed@gmail.com>

	* people.xml.in: Info about myself.
	* language-release-doc-stats-modules.tmpl: Added padding for sub
	modules for rtl langs
	*  language-release-ui-stats-modules.tmpl: 

2007-03-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Corrected branch for gnome-mag.

2007-03-04  Claude Paroz  <claude@2xlibre.net>
