@@ -1238,9 +1238,6 @@
   <module id="tracker">
     <branch id="HEAD"/>
   </module>
-  <module id="uf-view">
-    <branch id="HEAD"/>
-  </module>
   <module id="vino">
     <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
