@@ -239,7 +239,7 @@
     <module id="silky"/>
     <module id="sodipodi"/>
     <module id="straw"/>
-    <module id="uf-view"/>
+    <module id="tracker"/>
     <module id="webeyes"/>
     <module id="gnome-main-menu"/>
   </release>
