@@ -1,3 +1,8 @@
+2007-03-12  David Lodge <dave@cirt.net>
+
+	* releases.xml.in: Added tracker and removed uf-view
+	* modules.xml.in: Removed uf-view (isn't in svn)
+
 2007-03-11  David Lodge <dave@cirt.net>
 
 	* releases.xml.in: Removed null branch from drivel so it will show up in extras
